# matplotlib-map-utils

./: .gitignore  README.md  pyproject.toml  zensical.toml
docs/: index.md  inset_maps.md  north_arrows.md  package.md  quick.md  scale_bars.md  utilities.md
docs/assets/index/: generator_logo.py  generator_map.py
docs/assets/inset_maps/: generator.py
docs/assets/north_arrows/: generator.py
docs/assets/quick/: generator.py
docs/assets/scale_bars/: generator.py
docs/stylesheets/: extra.css
matplotlib_map_utils/: __init__.py  config.py  defaults.py  howto_north_arrow.ipynb  map_utils.py  north_arrow.py  validation.py
matplotlib_map_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
matplotlib_map_utils/core/: __init__.py  inset_map.py  north_arrow.py  scale_bar.py
matplotlib_map_utils/defaults/: __init__.py  inset_map.py  north_arrow.py  scale_bar.py
matplotlib_map_utils/docs/: howto_inset_map.ipynb  howto_north_arrow.ipynb  howto_scale_bar.ipynb  howto_utils.ipynb
matplotlib_map_utils/docs/assets/: generator.ipynb  mmu_logo.xcf
matplotlib_map_utils/utils/: __init__.py  usa.json  usa.py
matplotlib_map_utils/validation/: __init__.py  functions.py  inset_map.py  north_arrow.py  scale_bar.py  shared.py  validation.py  validation_scale_bar.py
