[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matplotlib-map-utils"
version = "3.1.0"
authors = [
  { name="David Moss", email="davidmoss1221@gmail.com" },
]
description = "A suite of tools for creating maps in matplotlib"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Framework :: Matplotlib",
]
dependencies = [
    "matplotlib>=3.9.0",
    "cartopy>=0.23.0",
    "great-circle-calculator>=1.3.1"
]

[tool.setuptools.packages.find]
exclude = ["matplotlib_map_utils.scratch*"]

[tool.setuptools.package-data]
"matplotlib_map_utils.utils" = ["*.json"]

[project.urls]
"Homepage" = "https://github.com/moss-xyz/matplotlib-map-utils/"
"Bug Tracker" = "https://github.com/moss-xyz/matplotlib-map-utils/issues"
